# plugins

./: .gitattributes  .gitignore
.agents/: code-explorer.md  geeky-coder.md
.claude-plugin/: marketplace.json
.claude/agents/: code-architect.md  code-explorer.md  code-reviewer.md  geeky-coder.md  geeky-implement-orchestrator.md  geeky-orchestrator.md
.codex/agents/: code-architect.toml  code-explorer.toml  code-reviewer.toml  geeky-coder.toml  geeky-implement-orchestrator.toml  geeky-orchestrator.toml
.cursor/agents/: code-architect.md  code-reviewer.md  geeky-coder.md  geeky-implement-orchestrator.md  geeky-orchestrator.md
.github/agents/: geeky-implement-orchestrator.agent.md  geeky-orchestrator.agent.md
.superpowers/sdd/: final-fix-report.md
dev-workflows/: PACKAGING.md  test_session_helpers.py
dev-workflows/.claude-plugin/: plugin.json
dev-workflows/.codex-plugin/: plugin.json
dev-workflows/hooks/: README.md  env-canary.sh  hooks.json  operational-efficiency-guard-claude.ps1  operational-efficiency-guard.ps1
dx-webdev/: README.md  plugin.json
dx-webdev/.claude-plugin/: marketplace.json  plugin.json
geeky-orchestration/: .gitignore  .mcp.json  AGENTS.md  README.md  geeky.manifest.json  test_geeky_orchestrator.py  test_plugin_metadata.py  test_preflight.py  test_quality_gates.py  test_sync_agents.py
geeky-orchestration/mcp/: README.md  evaluations.md  pyproject.toml  server.py
semantic-design-system/: .gitignore  LICENSE  README.md  package.json
semantic-design-system-plugin/: .mcp.json  FIX_NOTES.md  README.md
(+342 files in other folders)
